--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -34,6 +38,7 @@ dependencies {
     implementation 'com.parse:parse-android:1.15.7'
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
     implementation 'com.github.psinetron:slycalendarview:0.0.9'
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.1'
 
     //Facebook Parse
 
