--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.parse:parse-android:1.15.7'
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
-    implementation 'com.github.psinetron:slycalendarview:0.0.9'
     implementation 'com.github.mancj:MaterialSearchBar:0.8.1'
+    implementation 'com.archit.calendar:awesome-calendar:1.1.4'
 
     //Facebook Parse
 
