--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
     implementation 'com.github.mancj:MaterialSearchBar:0.8.1'
     implementation 'com.archit.calendar:awesome-calendar:1.1.4'
+    implementation 'com.ramotion.foldingcell:folding-cell:1.2.2'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     //Facebook Parse
 
