--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.archit.calendar:awesome-calendar:1.1.4'
     implementation 'com.ramotion.foldingcell:folding-cell:1.2.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.github.OpenCraft:AnimatedExpandableEditText:-SNAPSHOT'
 
     //Facebook Parse
 
