--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,9 @@ dependencies {
     implementation 'com.ramotion.foldingcell:folding-cell:1.2.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.github.OpenCraft:AnimatedExpandableEditText:-SNAPSHOT'
-
-
-    //Facebook Parse
-
-    //implementation 'com.github.parse-community:ParseFacebookUtils-Android:1.12.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
 
 
 }
